--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                         <select name="" id="option11">
                             <option value="INR" class="data">INR</option>
                             <option value="USD" class="data">USD</option>
-                            <option value="EURO" class="data">EURO</option>
-                            <option value="POUND" class="data">POUND</option>
+                            <option value="EUR" class="data">EUR</option>
+                            <option value="GBP" class="data">GBP</option>
                             <option value="AED" class="data">AED</option>
-                            <option value="CUD" class="data">CUD</option>
+                            <option value="CAD" class="data">CAD</option>
                             <option value="AUD" class="data">AUD</option>
-                            <option value="THAI BHATT" class="data">THAI BHATT</option>
+                            <option value="THB" class="data">THB</option>
                             <option value="SGD" class="data">SGD</option>
                         </select>
                     </div>
@@ -59,12 +59,12 @@
                         <select name="option22" id="option22">
                             <option value="INR">INR</option>
                             <option value="USD">USD</option>
-                            <option value="EURO">EURO</option>
-                            <option value="POUND">POUND</option>
+                            <option value="EUR">EUR</option>
+                            <option value="GBP">GBP</option>
                             <option value="AED">AED</option>
-                            <option value="CUD">CUD</option>
+                            <option value="CAD">CAD</option>
                             <option value="AUD">AUD</option>
-                            <option value="THAI BHATT">THAI BHATT</option>
+                            <option value="THB">THB</option>
                             <option value="SGD">SGD</option>
                         </select>
                     </div>
